[package]
name = "small-bedroom-sensor-node"
version = "0.2.0"
rust-version = "1.78"
edition = "2021"
license = "GPLv3"
authors = ["David Kleingeld & Eva van Houten"]

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true

embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-executor.workspace = true
embassy-embedded-hal.workspace = true
embassy-time.workspace = true
embassy-futures.workspace = true
embassy-usb = { version = "0.4.0", features = ["defmt"] }

defmt.workspace = true
defmt-rtt.workspace = true

embedded-hal.workspace = true
embedded-hal-async.workspace = true
embedded-hal-bus.workspace = true
embedded-io-async.workspace = true

panic-probe.workspace = true
futures.workspace = true
heapless = { git = "https://github.com/rust-embedded/heapless", version = "0.8", rev = "0ebca23", default-features = false }

# sensors
sensors = { path = "../sensors" }

# encoding
protocol = { workspace = true }
