[package]
name = "sensors"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
protocol = { workspace = true }
embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-futures.workspace = true
embassy-embedded-hal.workspace = true

defmt.workspace = true

embedded-hal = "1.0.0"
embedded-hal-async = "1.0"

# sensors
bosch-bme680 = { version = "1.0.2", path = "/home/david/Documents/async-bosch-bme680" }
max44009 = { version = "0.2", git = "https://github.com/dvdsk/max44009-rs" }
sht31 = { version = "0.3.0", git = "https://github.com/dvdsk/SHT31-rs", features = ["postcard"] }
mhzx = { version = "0.3.0", path = "/home/david/tmp/mh-zx-driver", features = ["serde", "postcard"] }
sps30-async = { version = "0.3.0", path = "/home/david/tmp/sps30", features = ["serde", "postcard"] }
nau7802-async = { path = "/home/david/tmp/nau7802-rs", features = ["serde", "postcard", "defmt"] }
