[package]
edition = "2024"
name    = "airbox"
version = "0.1.0"

[dependencies]
defmt = "0.3.10"
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "defmt",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "defmt",
  "esp32c6",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32c6", "critical-section"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-sync = { version = "0.6.2" }
embassy-futures = { version = "0.1.1" }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c6"] }
esp-wifi = { version = "0.13.0", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }

toml-cfg = "0.2"
protocol = { path = "../../../crates/protocol" }
bme280-rs = { version = "0.3.0", features = ["async"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
