[package]
name = "schema"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
license = "GPLv3"
authors = ["David Kleingeld & Eva van Houten"]

[dependencies]
heapless = "0.8.0"
postcard = { version = "1.0.10", features = ["experimental-derive"] }
postcard-rpc = "0.7.0"

protocol = { path = "../../../crates/protocol" }
serde = { version = "1.0.210", features = ["derive"], default-features = false }
serde_with = { version = "3.9.0", features = ["macros"], default-features = false } 
